--- a/templates/base.html
+++ b/templates/base.html
@@ -6,15 +6,21 @@
     {% block title %}
     {% endblock %}
     </title>
+    <meta charset="UTF-8">
+    <!--мета-тег HTML для контроля масштабирования и отображения веб-страницы на мобильных устройствах-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <!-- Подключение Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <!-- Подлючение Сss стилей -->
     <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
 </head>
 <body>
-    <div class="container">
+    <div class="background1">
         <!-- Общий контент или разметка -->
         {% block img %}
         {% endblock  %}
+    </div>
+    <div class="background2">
     </div>
     <div class = "text">
         {% block text %}
