--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -115,7 +115,7 @@ pre {
   font-family: "Pixeloid Sans", sans-serif;
   font-size: 13px;
   line-height: 1.5;
-  color: rgb(255, 0, 0);
+  color: rgb(0, 0, 0);
   box-sizing: border-box;
 	min-height: 74%;
 	padding-bottom: 10px;
@@ -295,4 +295,8 @@ main {
   font-size: 14px;
   font-family: "Jura light", sans-serif;
 }
-
+.form formslogin{
+  background-color: white; /* Устанавливаем белый цвет фона формы */
+  text-align: center; /* Выравниваем текст по центру */
+  padding: 20px; /* Добавляем немного внутренних отступов для контента */
+}
