--- a/templates/base.html
+++ b/templates/base.html
@@ -19,27 +19,35 @@
 
 
 <body>
+    <div class="navbar">
+        <ul class="nav nav-underline justify-content-end">
+            <div class="title">
+                <a href=http://127.0.0.1:8000>
+                    <img src={% static 'css/images/Title.png' %}> 
+                </a>
+            </div>
+            <li class="nav-item">
+                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#">Active</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+            </li>
+        </ul>
+    </div>  
     <div class = "wrapper">
-        <div class="title">
-            <a href=http://127.0.0.1:8000>
-                <img src={% static 'css/images/Title.png' %}> 
-            </a>
         </div>
-        <div>
-            {% if user_is_authenticated %}
-            <!-- Кнопка логина -->
-            <a href="/login_user" class="btn btn-light">Logout</a>
-          {% else %}
-            <!-- Кнопка выхода -->
-            <a href="/login_user" class="btn btn-light">Login</a>
-          {% endif %}
-        </div>
-        <div  class="background1">
-            {% block img %}{% endblock %}
-        </div>
-        <div class="content">
-            {% block text %}{% endblock %}
-        </div>
+            <div  class="background1">
+                {% block img %}{% endblock %}
+            </div>
+            <div class="content">
+                {% block text %}{% endblock %}
+            </div>
         <footer class="footer" id="myFooter">
             <div class="waves">
                 <div class="wave" id="wave1"></div>
@@ -58,7 +66,6 @@
                     <img class= "imgs" src={% static 'css/images/vk.png' %}>
                 </a></li>     
             </ul>
-            <date class = "li2">&copy;  2023 CactusJack</date>
         </footer>
     </div>
 </body>
