--- a/templates/login.html
+++ b/templates/login.html
@@ -12,6 +12,6 @@
       <label for="exampleInputPassword1" class="form-label">Введите пароль</label>
       <input type="password" class="form-control" id="exampleInputPassword1">
     </div>
-    <button type="submit" class="btn btn-primary">Отправить</button>
+    <button type="submit" class="btn btn-sm btn-warning">Отправить</button>
 </form>
 {% endblock %}
