--- a/templates/login.html
+++ b/templates/login.html
@@ -1,17 +1,20 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block text %}
-<form action="" method="POST" class="form">
+<body class="body_home">
+  {% block text %}
+  <form action="" method="POST" class="form">
+    {% csrf_token %}
     <div class="mb-3">
       <label for="exampleInputEmail1" class="col-form-label my-custom-label">Введите Login</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+      <input type="email" class="form-control" id="exampleInputEmail1" name="username" aria-describedby="emailHelp">
       <div id="emailHelp" class="form-text"></div>
     </div>
     <div class="mb-3">
       <label for="exampleInputPassword1" class="form-label">Введите пароль</label>
-      <input type="password" class="form-control" id="exampleInputPassword1">
+      <input type="password" class="form-control" id="exampleInputPassword1" name="password">
     </div>
     <button type="submit" class="btn btn-sm btn-warning">Отправить</button>
-</form>
-{% endblock %}
+  </form>
+  {% endblock %}
+</body>
