--- a/templates/base.html
+++ b/templates/base.html
@@ -1,72 +1,76 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>
-        {% block title %}{% endblock %}
-    </title>
-    <!-- Подключение Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <!-- Подключение CSS стилей -->
-    <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
-
-    <script src="https://kit.fontawesome.com/3017dcaeeb.js" crossorigin="anonymous"></script>
-
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
-</head>
-
-
-<body>
-    <div class="navbar">
-        <ul class="nav nav-underline justify-content-end">
-            <div class="title">
-                <a href=http://127.0.0.1:8000>
-                    <img src={% static 'css/images/Title.png' %}> 
-                </a>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>
+            {% block title %}{% endblock %}
+        </title>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+        <!-- Подключение Bootstrap CSS -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+        <!-- Подключение CSS стилей -->
+        <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
+        <script src="https://kit.fontawesome.com/3017dcaeeb.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
+    </head>
+    <body class="body_home">
+        <h1 class="code">
+            <div class="navbar">
+                <h1 class="title">
+                    <a href=http://127.0.0.1:8000>
+                        <img src={% static 'css/images/Title.png' %}>
+                    </a>
+                </h1>
+                <h1 class="content">
+                    <ul class="nav nav-underline justify-content-end">
+                        <li class="nav-item">
+                            <a class="nav-link" href="/user/registration/" style="color: black">Регистрация</a>
+                        </li>
+                        {% if user.is_authenticated %}
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" style="color: black" href="{% url 'logout' %}">Выход</a>
+                            </li>
+                        {% else %}
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" style="color: black" href="{% url 'login' %}">Вход</a>
+                        </li>
+                        {% endif %}
+                    </ul>
+                </h1>
             </div>
-            <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Active</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-            </li>
-        </ul>
-    </div>  
-    <div class = "wrapper">
-        </div>
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                        {{message}}
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                {% endfor %}
+            {% endif %}
             <div  class="background1">
                 {% block img %}{% endblock %}
             </div>
             <div class="content">
                 {% block text %}{% endblock %}
             </div>
-        <footer class="footer" id="myFooter">
-            <div class="waves">
-                <div class="wave" id="wave1"></div>
-                <div class="wave" id="wave2"></div>
-                <div class="wave" id="wave3"></div>
-                <div class="wave" id="wave4"></div>
-            </div>
-            <ul class="social-icon">
-                <li class="social-icon__item"><a class="social-icon__link" href="https://t.me/OneCactusJack">
-                    <img class= "imgs" src={% static 'css/images/telegram.png' %}> 
-                </a></li>
-                <li class="social-icon__item"><a class="social-icon__link" href="https://open.spotify.com/user/zanatlsa7c5oxax873nml19s3?si=cec0051f25c24c57">
-                    <img class= "imgs" src={% static 'css/images/spotify.png' %}> 
-                </a></li>
-                <li class="social-icon__item"><a class="social-icon__link" href="https://vk.com/iddinoco_photo">
-                    <img class= "imgs" src={% static 'css/images/vk.png' %}>
-                </a></li>     
-            </ul>
-        </footer>
-    </div>
-</body>
+        </h1>
+    </body>
+    <footer class="footer">
+        <div class="wave" id="wave1"></div>
+        <div class="wave" id="wave2"></div>
+        <div class="wave" id="wave3"></div>
+        <div class="wave" id="wave4"></div>
+        <ul class="social-icon">
+            <li class="social-icon__item"><a class="social-icon__link" href="https://t.me/OneCactusJack">
+                <img class= "imgs" src={% static 'css/images/telegram.png' %}> 
+            </a></li>
+            <li class="social-icon__item"><a class="social-icon__link" href="https://open.spotify.com/user/zanatlsa7c5oxax873nml19s3?si=cec0051f25c24c57">
+                <img class= "imgs" src={% static 'css/images/spotify.png' %}> 
+            </a></li>
+            <li class="social-icon__item"><a class="social-icon__link" href="https://vk.com/iddinoco_photo">
+                <img class= "imgs" src={% static 'css/images/vk.png' %}>
+            </a></li>
+        </ul>
+    </footer>
 </html>
