--- a/templates/register.html
+++ b/templates/register.html
@@ -1,23 +1,22 @@
 {% extends 'base.html' %}
 {% load static %}
 
-
-{% block title %}
-Регистрация
-{% endblock %}
-
-
 {% block text %}
-<h2>Регистрация</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Отправить</button>
-</form>
-<div class="form-floating">
-    <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
-    <label for="floatingTextarea">Comments </label>
-</div>
+<body class="body_home">
+    <form action="{% url 'register' %}" method="POST" class="form">
+        {% if form.errors %}
+        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            Произошла ошибка в регистрации, повторите попытку
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+        {% endif %}
+        {% csrf_token %}
+
+        {{ form.as_p }}
+    <br></br>
+    <button type="submit" class="btn btn-sm btn-warning">Отправить</button>
+    </form>
 {% endblock %}
+</body>
 
 
