--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
     </head>
     <body class="body_home">
         <h1 class="code">
-            <div class="navbar">
+            {% comment %} <div class="navbar">
                 <h1 class="title">
                     <a href=http://127.0.0.1:8000>
                         <img src={% static 'css/images/Title.png' %}>
@@ -39,7 +39,54 @@
                         {% endif %}
                     </ul>
                 </h1>
-            </div>
+            </div> {% endcomment %}
+            <nav class="navbar navbar-dark $orange-800 fixed-top" style="color: black">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="{% url 'home_page' %}">Разговор не о чем</a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                    <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+                        <div class="offcanvas-header">
+                            <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Книга Шефа</h5>
+                            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                        </div>
+                        <div class="offcanvas-body">
+                            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                                {% if user.is_authenticated %}
+                                    <li class="nav-item">
+                                        <a class="nav-link active" aria-current="page" href="{% url 'logout' %}">Выход</a>
+                                    </li>
+                                {% else %}
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="/user/registration/">Регистрация</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="{% url 'login' %}">Вход</a>
+                                    </li>
+                                {% endif %}
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="/user/registration/" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                        Что тут?
+                                    </a>
+                                    <ul class="dropdown-menu dropdown-menu-dark">
+                                        <li><a class="dropdown-item" href="#">Action</a></li>
+                                        <li><a class="dropdown-item" href="#">Another action</a></li>
+                                        <li>
+                                            <hr class="dropdown-divider">
+                                        </li>
+                                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        <form class="d-flex mt-3" role="search">
+                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                            <button class="btn btn-success" type="submit">Search</button>
+                        </form>
+                        </div>
+                    </div>
+                </div>
+            </nav>
             <div class="message">
             <br>
             {% if messages %}
@@ -59,6 +106,10 @@
             </div>
         </h1>
     </body>
+    <br>
+    <br>
+    <br>
+    <br>
     <footer class="footer">
         <div class="wave" id="wave1"></div>
         <div class="wave" id="wave2"></div>
