--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -5,21 +5,15 @@
 html,
 body {
   height: 100%;
+  background-color: #f4f4f4;
 }
 .code {
   min-height: 100%;
   display: flex;
   flex-direction: column;
 }
-.form {
-  position: absolute;
-  width: 400px;
-  height: 50%;
-  top: 30%;
-  left: 39%;
-}
 /*Картинка  */
-.title {
+.img-fluid {
   position: absolute;
   transform: scale(0.2);
   width: 100%;
@@ -52,7 +46,6 @@ ul {
   flex-grow: 1;
   line-height: 1.5;
   color: rgb(0, 0, 0);
-  margin-left: 20px;
   margin-right: 20px;
 }
 
@@ -62,6 +55,9 @@ ul {
   justify-content: center;
   width: 100%;
   height: 140px;  
+}
+.message {
+  margin-right: 20px;
 }
 /* Стиль начально картинки Cactus Jack */
 .profile {
@@ -80,8 +76,8 @@ ul {
 }
 /* Цвет текста OneCactusJack */
 :root {
-  --start-color: rgb(255, 255, 255);
-  --end-color: rgb(156, 73, 0);
+  --start-color: rgb(6, 6, 6);
+  --end-color: rgb(143, 67, 0);
   --animation-duration: 3s;
 }
 
@@ -94,7 +90,7 @@ ul {
 
 /* Стили для параграфа внутри блока профиля */
 .profile p {
-  font-size: 10px; /* Размер шрифта */
+  font-size: 15px; /* Размер шрифта */
   font-weight: bold; /* Жирность шрифта */
   margin-top: 15px; /* Внешний отступ сверху */
   font-family: "Disket Mono"; /* Шрифт */
@@ -288,4 +284,13 @@ pre {
 }
 .custom-link {
   color: black;
+}
+
+.nav {
+  color: aquamarine;
+}
+
+.custom-img {
+  width: 700px; /* Установите желаемую ширину */
+  height: auto; /* Автоматическое масштабирование высоты */
 }
