--- a/templates/article.html
+++ b/templates/article.html
@@ -19,5 +19,13 @@
             <h1>{{ t.text|safe }}</h1>
         {% endfor %}
     </div>
+    <br><br>
+    <hr>
+    <br>
+    <form action="{% url 'like_post' post.pk %}" method="POST">
+        {% csrf_token %}
+        <input type="hidden" name="post_id" value="{{ post.id }}">
+        <button type="submit" class="btn btn-primary btn-sm">Лайк</button>
+    </form>
 {% endblock %}
 
