--- a/templates/register.html
+++ b/templates/register.html
@@ -2,21 +2,23 @@
 {% load static %}
 
 {% block text %}
-<body class="body_home">
-    <form action="{% url 'register' %}" method="POST" class="form">
-        {% if form.errors %}
-        <div class="alert alert-warning alert-dismissible fade show" role="alert">
-            Произошла ошибка в регистрации, повторите попытку
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-        </div>
-        {% endif %}
-        {% csrf_token %}
+<body>
+    <div class="shadow p-4 mb-5 bg-body rounded">
+        <form action="{% url 'register' %}" method="POST" class="form">
+            {% if form.errors %}
+            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                Произошла ошибка в регистрации, повторите попытку
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+            {% endif %}
+            {% csrf_token %}
 
-        {{ form.as_p }}
-    <br></br>
-    <button type="submit" class="btn btn-sm btn-warning">Отправить</button>
-    </form>
-{% endblock %}
+            {{ form.as_p }}
+        <br></br>
+        <button type="submit" class="btn btn-sm btn-warning">Отправить</button>
+        </form>
+    </div>  
 </body>
+{% endblock %}
 
 
