--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -279,18 +279,19 @@ pre {
   text-align: center; /* Выравниваем текст по центру */
   padding: 20px; /* Добавляем немного внутренних отступов для контента */
 }
-.nav-item {
-  font-family:sans-serif
-}
-.custom-link {
-  color: black;
+
+.btn {
+  background: transparent;
+  border: none;
+  outline: none;
+  color: gray;
+
 }
 
-.nav {
-  color: aquamarine;
+.btn i:hover{
+  cursor: pointer;
+}
+.active{
+  color:red
 }
 
-.custom-img {
-  width: 700px; /* Установите желаемую ширину */
-  height: auto; /* Автоматическое масштабирование высоты */
-}
